Fix Modification Animator Menu

--- a/src/main/java/app/netlify/spkisp_ramdani/panels/PanelMenu.form
+++ b/src/main/java/app/netlify/spkisp_ramdani/panels/PanelMenu.form
@@ -47,7 +47,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="40" y="33" width="-1" height="-1"/>
+                  <AbsoluteConstraints x="40" y="31" width="-1" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -82,6 +82,16 @@
             <Property name="useNullLayout" type="boolean" value="false"/>
           </Layout>
           <SubComponents>
+            <Component class="javax.swing.JLabel" name="jLabel2">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Ikon"/>
+              </Properties>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+                  <AbsoluteConstraints x="40" y="30" width="-1" height="-1"/>
+                </Constraint>
+              </Constraints>
+            </Component>
             <Component class="com.k33ptoo.components.KButton" name="bAlternatif">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Alternatif"/>
@@ -113,6 +123,16 @@
             <Property name="useNullLayout" type="boolean" value="false"/>
           </Layout>
           <SubComponents>
+            <Component class="javax.swing.JLabel" name="jLabel3">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Ikon"/>
+              </Properties>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+                  <AbsoluteConstraints x="40" y="30" width="-1" height="-1"/>
+                </Constraint>
+              </Constraints>
+            </Component>
             <Component class="com.k33ptoo.components.KButton" name="bNilaiBobot">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Nilai Bobot"/>
