Menambahkan Panel Notifikasi

--- a/src/main/java/app/netlify/spkisp_ramdani/assets/reports/Blank_A4.jrxml
+++ b/src/main/java/app/netlify/spkisp_ramdani/assets/reports/Blank_A4.jrxml
@@ -128,11 +128,10 @@ Website : www.braincodesolution.com]]></text>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="47" splitType="Stretch">
+		<band height="91" splitType="Stretch">
 			<textField pattern="MMMMM dd, yyyy">
-				<reportElement x="420" y="12" width="142" height="20" uuid="56ba040c-9b4d-4120-9787-1c4422939908"/>
-				<textFieldExpression><![CDATA[new SimpleDateFormat("EEEE, dd MMMM yyyy HH:mm", new Locale("id", "ID")).format(new java.util.Date());
-]]></textFieldExpression>
+				<reportElement x="406" y="12" width="142" height="20" uuid="56ba040c-9b4d-4120-9787-1c4422939908"/>
+				<textFieldExpression><![CDATA[new SimpleDateFormat("dd MMMM yyyy", new Locale("id", "ID")).format(new java.util.Date());]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="0" y="6" width="571" height="1" uuid="7d037e31-5e76-427f-aad9-0fb56b7339f6"/>
@@ -143,7 +142,12 @@ Website : www.braincodesolution.com]]></text>
 			<staticText>
 				<reportElement x="300" y="12" width="100" height="20" uuid="e79cf63b-894d-4146-96e4-8607284102b6"/>
 				<textElement textAlignment="Right"/>
-				<text><![CDATA[Tanggal Cetak : ]]></text>
+				<text><![CDATA[Jakarta, ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="350" y="70" width="100" height="20" uuid="32a71c1c-5757-4da2-9124-957d45b40519"/>
+				<textElement textAlignment="Right"/>
+				<text><![CDATA[Dede Herman]]></text>
 			</staticText>
 		</band>
 	</columnFooter>
