--- a/src/main/java/app/netlify/spkisp_ramdani/panels/PanelProvider.form
+++ b/src/main/java/app/netlify/spkisp_ramdani/panels/PanelProvider.form
@@ -118,7 +118,7 @@
                       <Dimension value="[2147483647, 2147483647]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[305, 200]"/>
+                      <Dimension value="null"/>
                     </Property>
                     <Property name="rowHeight" type="int" value="40"/>
                     <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
